--- a/AnotherWebPage.html
+++ b/AnotherWebPage.html
@@ -7,6 +7,6 @@ A paragraph >
 
 <h1> Keith's Week 2 assignment 1 page.
 <h2> Subheader inside Main header </h2> </h1>
-<img src="http://ksbyrd.github.com/ksbyrd/Steer.jpg" />
-<a href="http://ksbyrd.github.com/ksbyrd/Steers2.html/">More Steers</a>
+<img src="http://ksbyrd.github.com/Steer.jpg" />
+<a href="http://ksbyrd.github.com/AnotherWebPage.html/">More Steers</a>
 <p>In my spare time I dabble around a bit in agriculture. I've got 72 acres 10 from which I harvest hay and another 10 or so for pasture. Doesn't VS code wrap text? Wow! Talk about your poorly formed paragraph! How's this one?</p>
